fix long url in blog post breaking layout on mobile view

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -391,6 +391,14 @@ footer .theme-by {
 .post-entry {
   width: 100%;
   margin-top: 10px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+}
+.blog-post {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
 }
 .post-image {
   float: right;
